# Ludic_Director

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/minimal_director/: run.py
src/ludic_director/: __init__.py  client.py  jsonlog.py  memory.py  personality.py  runtime.py  soul.py  types.py
tests/: test_jsonlog.py  test_personality.py  test_runtime_combat.py  test_soul.py
