[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ludic-director"
version = "0.1.0"
description = "Layered game AI director: tool calls, memory, soul, OpenAI-compatible client, action queue."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Paul Santomauro" }]
keywords = ["game", "ai", "llm", "director", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/PaulSantomauro/ludic-director"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
